--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/themes": "^3.2.1",
+    "clsx": "^2.1.1",
     "radix-ui": "^1.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0"
